# NCAA_C

./: CMakeLists.txt  README  README.md  calculateSRS.cpp  checkGamePredictions.cpp  checkGamePredictions.rb  gen_averages.cpp  generateAverages.cpp  generateGameFunctionHistograms.cpp  generateSRS.cpp  generateSRSadditions.cpp  generateStandardDeviations.cpp  generateWAverageFunctions.cpp  generateWeightedAverages.cpp  generateWeights.cpp  generateWeightsFixedSRS.cpp  main.cpp  predictAllGamesOnDate.cpp  predictGameOnDate.cpp  predictGameOnDate.rb  rankTeamsByGameScore.cpp  showTeamStats.cpp  showTeamStats.rb  showTournamentMatchup.cpp  showTournamentMatchup.rb  showWAverageFns.rb  tournamentSimulation.cpp
constants/: game_function_weights.0.0.d  game_function_weights.0.5.d  game_function_weights.d  game_function_weights.free.d  season_info.d  srs_addition.d  srs_additions.d  team_5yr_averages.d  team_neutral_ratios.d  team_point_differentials.d  team_win_ratios.d  waverage_functions.d  waverage_standard_deviations.d
helpers/: doubleFormatter.h  vectorMinMax.h  vegasConversion.h
src/: ConstantFunctions.cpp  ConstantFunctions.h  ConstantGameFunction.cpp  ConstantGameFunction.h  ConstantGameFunctionWeights.cpp  ConstantGameFunctionWeights.h  ConstantSRSadditions.cpp  ConstantSRSadditions.h  ConstantSeasonInfo.cpp  ConstantSeasonInfo.h  ConstantStandardDeviations.cpp  ConstantStandardDeviations.h  ConstantTeam5YearAverages.cpp  ConstantTeam5YearAverages.h  ConstantTeamNeutralRatios.cpp  ConstantTeamNeutralRatios.h  ConstantTeamPointDifferentials.cpp  Game.cpp  Game.h  (+24 more)
(+18 files in other folders)
